# ddsp-timbre-remap

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
cfg/: nime_demo.yaml  onset_mapping_808.yaml  onset_mapping_808_linear.yaml  onset_mapping_808_lrg.yaml
cfg/data/: carson_pop_damp.yaml  carson_pop_no_damp.yaml  carson_supra_damp.yaml  carson_supra_no_damp.yaml  snare_onset.yaml
cfg/features/: onset_feature_full.yaml  onset_features.yaml
cfg/models/: linear_mapper.yaml  mlp_mapper.yaml  mlp_mapper_lrg.yaml
cfg/presets/: 808_kick.json  808_noisy_snare.json  808_snare_1.json  808_snare_2.json  808_snare_3.json  808_tom_1.json  808_tom_2.json
cfg/synths/: snare_808.yaml
examples/: feature_matching.py  feature_matching_mfcc.py
experiments/: feature_matching.ipynb  feature_matching_mfcc.py  feature_space_experiments.sh  loudness_matching.ipynb
scripts/: direct_optimize.sh  results.py  train_linear.sh  train_mlp.sh  train_mlp_lrg.sh  train_nime_demo.sh
test/: test_data.py  test_feature.py  test_model.py  test_np_core.py  test_synth.py  test_tasks.py
timbreremap/: callback.py  cli.py  data.py  export.py  feature.py  feature_factory.py  loss.py  model.py  optuna.py  synth.py  tasks.py
timbreremap/np/: __init__.py  core.py  features.py
timbreremap/utils/: model.py
