[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["timbreremap", "timbreremap.np", "timbreremap.utils"]

[project]
name = "timbreremap"
version = "1.1"
dependencies = [
    "einops",
    "jsonargparse[signatures]>=4.18.0",
    "lightning",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pyloudnorm",
    "scipy",
    "torch",
    "torchaudio",
]

[project.scripts]
timbreremap = "timbreremap.cli:main"
timbreremap-test = "timbreremap.cli:test_version"
timbreremap-train-sdss = "timbreremap.cli:train_sdss"
timbreremap-optuna = "timbreremap.optuna:run_optuna"
timbreremap-direct = "timbreremap.cli:direct_optimization"
timbreremap-optimize-sdss = "timbreremap.cli:optimize_sdss"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "flake8",
    "pytest",
    "pytest-mock",
    "pre-commit",
    "pytest-cov",
    "matplotlib",
    "nbstripout",
    "nbmake",
    "ipywidgets",
    "optuna",
]
